fix: stopping container before removing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,6 @@ jobs:
         script: |
           cd /apps/commitzero-blog 
           docker build . -t commitzero-blog
+          docker stop commitzero-blog || true
           docker rm commitzero-blog || true
           docker run -d --name commitzero-blog -p 3000:3000 commitzero-blog
