--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,35 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint-check:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Copy repository contents via scp
+      uses: appleboy/scp-action@master
+      env:
+        HOST: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSHKEY }}
+      with:
+        source: "."
+        target: "/apps/commitzero-blog"
+
+    - name: Running lint and type checking
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSHKEY }}
+        script: |
+          cd /apps/commitzero-blog 
+          yarn install
+          yarn lint:check
+
   build:
     runs-on: ubuntu-latest
 
@@ -24,7 +53,7 @@ jobs:
         source: "."
         target: "/apps/commitzero-blog"
 
-    - name: Building conatiner
+    - name: Running build container
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
