--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout and test
       uses: actions/checkout@v2
     - run: |
         yarn install
@@ -19,7 +19,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    if: success()
+    needs:
+      - lint-check
 
     steps:
     - uses: actions/checkout@v2
