Advance in page layout ~ fix some bugs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:check": "tsc --project ./tsconfig.json --noEmit && eslint . -c .eslintrc --ext .ts,.tsx"
+    "lint:check": "tsc --project ./tsconfig.json --noEmit && eslint . -c .eslintrc.json --ext .ts,.tsx"
   },
   "dependencies": {
     "next": "11.1.2",
