--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,20 +2,18 @@ name: Deploy
 
 on:
   push:
-    branches: [ main ]
-
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
   lint-check:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout and test
-      uses: actions/checkout@v2
-    - run: |
-        yarn install
-        yarn lint:check
+      - name: Checkout and test
+        uses: actions/checkout@v2
+      - run: |
+          yarn install
+          yarn lint:check
 
   build:
     runs-on: ubuntu-latest
@@ -23,40 +21,40 @@ jobs:
       - lint-check
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Copy repository contents via scp
-      uses: appleboy/scp-action@master
-      env:
-        HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-      with:
-        source: "."
-        target: "/apps/commitzero-blog"
+      - name: Cleaning environment
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: |
+            rm -rf /apps/commitzero-blog 
+            docker images -f "dangling=true" --format "{{.ID}}" | xargs docker rmi - || true
 
-    - name: Building application
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-        script: |
-          cd /apps/commitzero-blog 
-          docker images -f "dangling=true" --format "{{.ID}}" | xargs docker rmi - || true
-          docker build . -t commitzero-blog
+      - name: Copy repository contents via scp
+        uses: appleboy/scp-action@master
+        env:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+        with:
+          source: "."
+          target: "/apps/commitzero-blog"
 
-    - name: Deploying application
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-        script: |
-          cd /apps/commitzero-blog 
-          docker stop commitzero-blog || true
-          docker rm commitzero-blog || true
-          docker run -d --name commitzero-blog -p 3000:3000 commitzero-blog
+      - name: Building application
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: |
+            cd /apps/commitzero-blog 
+            docker build . -t commitzero-blog
+            docker stop commitzero-blog || true
+            docker rm commitzero-blog || true
+            docker run -d --name commitzero-blog -p 3000:3000 commitzero-blog
