--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
-  ,"typeRoots": ["./@types"]
+    "jsx": "preserve",
+    "typeRoots": ["./@types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
