--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,18 +21,11 @@ jobs:
       - lint-check
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Cleaning environment
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.SSHKEY }}
-          script: |
-            rm -rf /apps/commitzero-blog 
-            docker images -f "dangling=true" --format "{{.ID}}" | xargs docker rmi - || true
+      - name: Build
+        uses: actions/checkout@v2
+      - run: |
+          yarn install
+          yarn build
 
       - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
@@ -42,6 +35,7 @@ jobs:
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
         with:
+          rm: true
           source: "."
           target: "/apps/commitzero-blog"
 
@@ -52,9 +46,4 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
-          script: |
-            cd /apps/commitzero-blog 
-            docker build . -t commitzero-blog
-            docker stop commitzero-blog || true
-            docker rm commitzero-blog || true
-            docker run -d --name commitzero-blog -p 3000:3000 commitzero-blog
+          script: pm2 restart commitzero-blog
