manually deleting and starting a pm2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,16 @@ jobs:
           rm: true
           source: "."
           target: "/apps/commitzero-blog"
+
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: |
+            exec bash
+            cd /apps/commitzero-blog
+            pm2 delete commitzero-blog
+            pm2 start yarn --name "commitzero-blog" -- start
